# findlibc

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  BUILD.bzl  MODULE.bazel  README.adoc  README.md  README.txt  WORKSPACE.bazel
config/: BUILD.bazel  ansi_colors.h
config/cc/: BUILD.bzl  CONFIG.bzl
config/debug/: BUILD.bazel
lib/: BUILD.bazel  findlibc.c
lib/lexer/: BUILD.bazel  meta_lexis.c
lib/lexer/lexis/: BUILD.bazel  meta_lexis.re
lib/map_reduce/: BUILD.bazel  findlib_map_reduce.c
lib/parser/: BUILD.bazel  meta_debugging.c  meta_entries.c  meta_flags.c  meta_packages.c  meta_parser.c  meta_properties.c  meta_settings.c  meta_syntaxis.c  meta_syntaxis.h  meta_syntaxis.y  meta_values.c
lib/parser/syntaxis/: BUILD.bazel  meta_syntaxis.y
src/: BUILD.bazel  findlib.c  findlibc_debug.c  macros_debug.h  macros_ndebug.h
src/emitters/: BUILD.bazel  emit_build_bazel.c  emit_jsoo.c  emit_ocaml_repo.c  emit_pkg_bindir.c  handlers_findlib.c
src/lexer/: BUILD.bazel  meta_lexis.c  meta_lexis.re
src/map_reduce/: BUILD.bazel  findlib_map_reduce.c
src/parser/: BUILD.bazel  debug_meta.c  meta_debugging.c  meta_entries.c  meta_flags.c  meta_packages.c  meta_parser.c  meta_properties.c  meta_settings.c  meta_syntaxis.y  meta_values.c
test/: BUILD.bazel  MODULE.bazel  crawler_test.c  crawltest.c  lex_test.c  parse_test.c
test/app/: BUILD.bazel  dev_app.c  meta_parse.c
test/data/core/: META
test/data/ppxlib/: META
test/data/yojson/: META
tools/: refresh.sh
