load("@makeheaders//src:RULES.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl",
     "BASE_DEPS",
     "BASE_COPTS",
     "BASE_INCLUDE_PATHS",
     DEFINES = "BASE_DEFINES")

DEPS  = BASE_DEPS + ["@liblogc//src:logc", "@uthash//src:uthash"]
COPTS = BASE_COPTS + BASE_INCLUDE_PATHS + [
    "-I$(@liblogc)/src",
    "-I$(@uthash)/src"
]
TOOLCHAINS = ["//:test_repo_paths"]

################################################################
# test_suite(
#     name  = "test",
#     tests = [
#     ]
# )

################################################################
cc_binary(
    name  = "parse_test",
    linkstatic = 1,
    srcs  = ["parse_test.c", ":mkhdrs"],
    deps = DEPS + ["//src:findlibc"],
    copts = COPTS + [
        "-I$(GENDIR)/$(@)/src",
        "-I$(GENDIR)/$(@)/test",
    ],
    local_defines = DEFINES,
    toolchains = TOOLCHAINS,
)

##########
# WARNING: lexer's API not exposed in findlib.h
# so we depend on lexer directly, not libfindlib,
# which means too that mkhdrs does same
cc_binary(
    name  = "lex_test",
    linkstatic = 1,
    srcs  = ["lex_test.c", ":mkhdrs"],
    deps = DEPS + ["//src/lexer:meta_lexer"],
    copts = COPTS + ["-I$(GENDIR)/$(@)/test"],
    local_defines = DEFINES,
    toolchains = TOOLCHAINS,
)

##########
cc_binary(
    name  = "crawl_test",
    linkstatic = 1,
    srcs  = ["crawler_test.c", ":mkhdrs"],
    deps = DEPS   + ["//src:findlibc"],
    copts = COPTS + [
        "-I$(GENDIR)/$(@)/src",
        "-I$(GENDIR)/$(@)/test",
    ],
    local_defines = DEFINES,
    toolchains = TOOLCHAINS,
)

################################################################
# cc_binary(
#     name  = "walk_test",
#     linkstatic = 1,
#     srcs  = [
#         "walk_test.c",
#         "walk_test.h",
#         # "//src:log.h"
#     ],
#     copts = COPTS + [

#         "-Isrc",
#         "-Itest",

#         "-I$(GENDIR)/src",
#         "-I$(GENDIR)/src/opam",
#         "-I$(GENDIR)/test/opam",

#         "-Ivendored/uthash",

#         "-Iexternal/mibl/src",
#         "-I$(GENDIR)/external/mibl/src",

#         "-Iexternal/mibl/opam/test",
#         "-I$(GENDIR)/external/mibl/test/opam",

#         "-Iexternal/libs7/src",
#     ],
#     defines = ["DEBUG", "TRACING"],
#     deps = [
#         "//src:treewalker",
#         # "//src:opam_lexer"
#     ],
# )

################################################################
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "crawler_test.c",
        "lex_test.c",
        "parse_test.c",
    ],
    additional_srcs = [
        "//src/lexer:meta_lexis.c",
        "//src/parser:meta_syntaxis.c",
    ],
)
