load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl",
     "BASE_COPTS",
     "BASE_DEFINES")

DEPS  = ["@liblogc//lib:logc", "@uthash//lib:uthash"]
COPTS = BASE_COPTS
TOOLCHAINS = ["//:test_module_profiles"]

################################################################
# test_suite(
#     name  = "test",
#     tests = [
#     ]
# )

################################################################
cc_binary(
    name  = "parse_test",
    linkstatic = 1,
    srcs  = ["parse_test.c", ":mkhdrs"],
    deps = DEPS + [
        "//lib:findlibc",
    ],
    copts = COPTS + [
        "-I$(GENDIR)/$(@)/lib",
        "-I$(GENDIR)/$(@)/test",
    ],
    local_defines = BASE_DEFINES,
    toolchains = TOOLCHAINS,
)

##########
# WARNING: lexer's API not exposed in findlib.h
# so we depend on lexer directly, not libfindlib,
# which means too that mkhdrs does same
cc_binary(
    name  = "lex_test",
    linkstatic = 1,
    srcs  = ["lex_test.c", ":mkhdrs"],
    deps = DEPS + ["//lib/lexer:meta_lexer"],
    copts = COPTS + ["-I$(GENDIR)/$(@)/test"],
    local_defines = BASE_DEFINES,
    toolchains = TOOLCHAINS,
)

##########
cc_binary(
    name  = "crawl_test",
    linkstatic = 1,
    srcs  = ["crawler_test.c", ":mkhdrs"],
    deps = DEPS   + [
        "//lib:findlibc",
        "@semverc//src:semverc",
    ],
    copts = COPTS + [
        "-I$(GENDIR)/$(@)/lib",
        "-I$(GENDIR)/$(@)/test",
        "-I$(@semverc)/src",
    ],
    local_defines = BASE_DEFINES,
    toolchains = TOOLCHAINS,
)

################################################################
# cc_binary(
#     name  = "walk_test",
#     linkstatic = 1,
#     srcs  = [
#         "walk_test.c",
#         "walk_test.h",
#         # "//lib:liblogc.h"
#     ],
#     copts = COPTS + [

#         "-Isrc",
#         "-Itest",

#         "-I$(GENDIR)/src",
#         "-I$(GENDIR)/src/opam",
#         "-I$(GENDIR)/test/opam",

#         "-Ivendored/uthash",

#         "-Iexternal/mibl/src",
#         "-I$(GENDIR)/external/mibl/src",

#         "-Iexternal/mibl/opam/test",
#         "-I$(GENDIR)/external/mibl/test/opam",

#         "-Iexternal/libs7/src",
#     ],
#     defines = ["DEBUG", "TRACING"],
#     deps = [
#         "//lib:treewalker",
#         # "//lib:opam_lexer"
#     ],
# )

################################################################
makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "crawler_test.c",
        "lex_test.c",
        "parse_test.c",
    ],
    additional_srcs = [
        "//lib/lexer:meta_lexis.c",
        "//lib/parser:meta_syntaxis.c",
    ] + select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@makeheaders//logging:ansi_colors.h",
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }),
)
