load("@bazel_skylib//rules:common_settings.bzl",
     "bool_flag", "string_flag")

load("@makeheaders//rules:makeheaders.bzl", "makeheaders")

load("//config/cc:CONFIG.bzl", COPTS = "BASE_COPTS", "PROFILE")
     # "BASE_DEFINES")
     # "BASE_DEPS")

# PROFILE = ["PROFILE_$(COMPILATION_MODE)"]

# TOOLCHAINS = ["//:module_profiles"]

# for mkhdr findlib.h
exports_files(["findlib_map_reduce.c"])

cc_library(
    name = "findlib_map_reduce",
    srcs = [
        "findlib_map_reduce.c",
        ":mkhdrs"
    ],
    includes = ["."],
    deps = [ # BASE_DEPS + [
        "@liblogc//lib:logc",
        "@uthash//lib:uthash",
    ],
    copts = COPTS + ["-I$(GENDIR)"],
        # "-I$(GENDIR)/$(@)/lib/map_reduce",
    # ],
    defines = PROFILE,
    # toolchains = TOOLCHAINS,
    visibility = ["//visibility:public"]
)

makeheaders(
    name = "mkhdrs",
    hdrs_srcs = [
        "findlib_map_reduce.c",
    ],
    additional_srcs = [
        "@makeheaders//logging:ansi_colors.h",
        # "//lib:findlibc_debug.c"
    ] + select({
        "@makeheaders//compilation_mode:fastbuild": [
            "@makeheaders//logging:macros_debug.h"
        ],
        "//conditions:default": [
            "@makeheaders//logging:macros_ndebug.h"
        ]
    }),
)
